[package]
name = "cell-fs"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]
description = "A virtual filesystem for games. Inspired by PhysicFS"
license = "MIT"

[dependencies]
itertools = "*"
quick-error = "*"
uuid = "*"
zip = { version = "*", optional = true }

[features]
default = ["zip"]
