[package]
name = "cell-fs"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]
description = "A virtual filesystem for games. Inspired by PhysicFS"
license = "MIT"
homepage = "https://github.com/KokaKiwi/rust-cell-fs"
repository = "https://github.com/KokaKiwi/rust-cell-fs"
documentation = "http://kokakiwi.github.io/rust-cell-fs/cell_fs/"

[dependencies]
itertools = "*"
quick-error = "*"
uuid = "*"
zip = { version = "*", optional = true }

[features]
default = ["zip"]
